--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "babel-jest": "^27.0.6",
+    "jest": "^27.0.6",
     "nodemon": "^2.0.12"
   },
   "scripts": {
     "start": "nodemon ./src/index.",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll"
   },
   "author": "Victor Tran",
   "license": "ISC",
