add some set up / updates with new version

--- a/package.json
+++ b/package.json
@@ -3,18 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "./src/index.js",
-  "dependencies": {
-    "@discordjs/builders": "^0.5.0",
-    "@discordjs/rest": "^0.1.0-canary.0",
-    "discord-api-types": "^0.22.0",
-    "discord.js": "^13.0.1",
-    "moment": "^2.29.1",
-    "uuid": "^8.3.2"
-  },
   "devDependencies": {
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "babel-jest": "^27.0.6",
+    "eslint": "^8.20.0",
     "jest": "^27.0.6",
     "nodemon": "^2.0.12"
   },
@@ -24,5 +17,9 @@
   },
   "author": "Victor Tran",
   "license": "ISC",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@discordjs/rest": "^1.0.1",
+    "discord.js": "^14.1.1"
+  }
 }
