--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "type": "module",
   "dependencies": {
     "@discordjs/rest": "^1.0.1",
-    "discord.js": "^14.1.1"
+    "discord.js": "^14.1.1",
+    "firebase": "^9.9.1"
   }
 }
