--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
-  "name": "lucybot",
-  "version": "1.0.0",
-  "description": "",
-  "main": "./src/index.js",
-  "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
-    "babel-jest": "^27.0.6",
-    "eslint": "^8.20.0",
-    "jest": "^27.0.6",
-    "nodemon": "^2.0.12"
-  },
-  "scripts": {
-    "start": "nodemon ./src/index.",
-    "test": "jest --watchAll"
-  },
-  "author": "Victor Tran",
-  "license": "ISC",
-  "type": "module",
-  "dependencies": {
-    "@discordjs/rest": "^1.0.1",
-    "discord.js": "^14.1.1",
-    "firebase": "^9.9.1"
-  }
+    "name": "lucybot",
+    "version": "1.0.0",
+    "description": "",
+    "main": "./src/index.js",
+    "devDependencies": {
+        "@babel/core": "^7.15.0",
+        "@babel/preset-env": "^7.15.0",
+        "@tsconfig/node16": "^1.0.3",
+        "@types/node": "^18.6.3",
+        "babel-jest": "^27.0.6",
+        "eslint": "^8.20.0",
+        "jest": "^27.0.6",
+        "nodemon": "^2.0.12",
+        "ts-node": "^10.9.1",
+        "typescript": "^4.7.4"
+    },
+    "scripts": {
+        "dev": "nodemon ./src/index.ts",
+        "test": "jest --watchAll"
+    },
+    "author": "Victor Tran",
+    "license": "ISC",
+    "dependencies": {
+        "@discordjs/rest": "^1.0.1",
+        "discord.js": "^14.1.1",
+        "firebase": "^9.9.1"
+    }
 }
