--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@discordjs/rest": "^1.0.1",
         "discord.js": "^14.1.1",
         "firebase": "^9.9.1",
+        "js-sha256": "^0.9.0",
         "moment": "^2.29.4"
     }
 }
