--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "typescript": "^4.7.4"
     },
     "scripts": {
-        "dev": "nodemon ./src/index.ts",
+        "dev": "nodemon ./src/index.ts --ignore raid.json",
         "test": "jest --watchAll"
     },
     "author": "Victor Tran",
